@@ -1,3 +1,10 @@
+2002-05-02  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* configure: Regen.
+	* tcljava.m4 (AC_JAVA_JNI_LIBS): The previous checkin
+	neglected to use the $machine variable for variable
+	names. Fix that.
+
 2002-04-29  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* configure: Regen.
